--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -7,6 +7,19 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html::-webkit-scrollbar {
+    width: 10px;
+    height: 5px;
+}
+html::-webkit-scrollbar-thumb {
+    background-color: #5c5c5c; /* Color of the scrollbar thumb */
+    border-radius: 5px; /* Radius of the scrollbar thumb corners */
+}
+
+html::-webkit-scrollbar-track {
+    background-color: #222; /* Color of the scrollbar track */
+}
+
 /* Variables */
 :root {
     --background-color: #101010;
