added scrolling in movie_schedule_styles.css

--- a/public/styles/movie_schedule_styles.css
+++ b/public/styles/movie_schedule_styles.css
@@ -71,7 +71,7 @@
     display: flex;
     justify-content: left;
     overflow-x: auto;
-    overflow-y: hidden;
+    overflow-y: auto;
     white-space: nowrap;
 }
 
