MO - schedule kinda works, date needs adjustment

--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -202,7 +202,7 @@ nav .wrapper{
     cursor: pointer;
     }
 
-    .login-form {
+    .editmovie-form {
     position: absolute;
     top: 45%;
     left: 50%;
